--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Base
-url: "https://orange-ape.cloudvent.net/"
+title: LyricsBD
+url: "https://lyricsbd.github.io/"
 baseurl:
 google_analytics_key:
 disqus_shortname:
@@ -10,7 +10,7 @@ newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Knowledge base template for Jekyll.
+description: Song LyricsBD.
 author:
   name:
   email:
